--- a/packages/treewalker/package.json
+++ b/packages/treewalker/package.json
@@ -6,5 +6,15 @@
   },
   "type": "commonjs",
   "main": "./src/index.js",
-  "typings": "./src/index.d.ts"
+  "typings": "./src/index.d.ts",
+  "devDependencies": {
+    "@playwright/test": "1.39.0",
+    "@types/express": "4.17.19",
+    "@types/node": "20.8.6",
+    "express": "4.18.2"
+  },
+  "scripts": {
+    "test": "playwright test",
+    "test:server": "node ./tests/test-server.js"
+  }
 }
