--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@swc/helpers": "0.5.2",
+    "@swc/helpers": "^0.5.3",
     "tslib": "2.3.0"
   },
   "devDependencies": {
@@ -13,9 +13,10 @@
     "@nx/jest": "16.10.0",
     "@nx/js": "16.10.0",
     "@nx/linter": "16.10.0",
-    "@swc/cli": "~0.1.62",
-    "@swc/core": "~1.3.85",
+    "@swc/cli": "0.1.62",
+    "@swc/core": "1.3.85",
     "@swc/jest": "0.2.20",
+    "@swc/register": "^0.1.10",
     "@types/express": "4.17.19",
     "@types/node": "18.7.1",
     "@typescript-eslint/eslint-plugin": "5.60.1",
