--- a/packages/treewalker/package.json
+++ b/packages/treewalker/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "treewalker",
+  "name": "@pierce-dom/treewalker",
   "version": "0.0.1",
   "dependencies": {
     "@swc/helpers": "~0.5.2"
   },
-  "type": "commonjs",
-  "main": "./src/index.js",
-  "typings": "./src/index.d.ts",
+  "type": "module",
+  "main": "./lib/index.js",
+  "typings": "./lib/index.d.ts",
   "devDependencies": {
     "@playwright/test": "1.39.0",
     "@types/express": "4.17.19",
-    "@types/node": "20.8.6",
     "express": "4.18.2"
   },
   "scripts": {
     "test": "playwright test",
     "test:server": "node ./tests/test-server.js"
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./lib/index.js"
+    }
   }
 }
