--- a/packages/element-contains/package.json
+++ b/packages/element-contains/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@pierce-dom/element-contains",
   "version": "0.0.1",
+  "type": "module",
+  "main": "./lib/index.js",
+  "typings": "./lib/index.d.ts",
   "dependencies": {
     "@swc/helpers": "~0.5.2"
   },
@@ -9,9 +12,10 @@
     "@types/express": "4.17.19",
     "express": "4.18.2"
   },
-  "type": "module",
-  "main": "./lib/index.js",
-  "typings": "./lib/index.d.ts",
+  "scripts": {
+    "test": "playwright test",
+    "test:server": "node ./tests/test-server.js"
+  },
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
